--- a/자바 정리.md
+++ b/자바 정리.md
@@ -1,13 +1,18 @@
-제목
+2021.01.05
 ============
-부제목
-------------
 
-# 큰제목
-  내용은 tab 눌러 작성
-## 점점
-* * *
-  별 세개는 뭐더라
-### 작아져
-  마크다운 문법 찾아보고 깃허브 정리 예쁘게 하기
-  슬래쉬를 사용해서 깃허브 폴더 만들기
+# JVM
+## 가상머신
+  - 컴퓨팅 환경을 소프트웨어로 구현한 것
+## JVM
+  - JAVA Virtual Machine (자바 가상 머신)
+  - 자바 애플리케이션을 클래스 로더를 통해 읽어 들여 자바 API와 함께 실행하는 것
+  - JAVA와 OS 사이에서 중개자 역할을 수행하여 JAVA가 OS에 구애받지 않고 재사용할 수 있도록 해줌
+  - Garbage Collection 수행
+  - 스택기반의 가상머신
+ ## 자바프로그램 실행과정
+  1. 프로그램이 실행되면 JVM이 OS로부터 이 프로그램이 필요로 하는 메모리를 할당받음. JVM은 이 메모리를 용도에 따라 여러 영역으로 나누어 관리함
+  2. 자바 컴파일러가 자바 소스코드를 읽어들여 자바 바이트코드로 변환시킴
+  3. Class Loader를 통해 class 파일들을 JVM으로 로딩함
+  4. 로딩된 class 파일들은 Execution engine을 통해 해석됨
+  5. 해석된 바이트코드는 Runtime Data Areas에 배치되어 실질적인 수행이 이루어짐
