--- a/자바 정리.md
+++ b/자바 정리.md
@@ -267,3 +267,31 @@ public class InputStreamEx {
 		weight = 1; -> 메서드 안에서 변경 불가
 	}
 ### 그 외는 https://advenoh.tistory.com/13 참고
+
+2021.01.15
+=============
+# SOLID
+## SRP (단일 책임의 원칙)
+- 작성된 클래스는 하나의 기능만 가짐
+- 모든 서비스는 그 하나의 책임을 수행하는 데 집중되어야 함
+- 한 책임의 변경에서 다른 책임의 변경으로의 연쇄작용이 자유로움
+- 코드 가독성 향상, 유지보수 용이
+- 다른 원리들을 적용하는 기초
+## OCP (개방폐쇄의 원칙)
+- 소프트웨어의 구성요소는 확장에는 열려있고, 변경에는 닫혀있어야 함
+- 변경을 위한 비용은 가능한 줄이고 확장을 위한 비용은 가능한 극대화 해야 함
+- 요구사항의 변경이나 추가사항이 발생하더라도 기존 구성요소는 수정이 일어나면 안되며, 기존 구성요소를 쉽게 확장해서 재사용할 수 있어야 함
+- 추상화와 다형성
+## LSP (리스코브 치환의 원칙)
+- 서브 타입은 언제나 기반 타입과 호환될 수 있어야 함
+- 서브 타입은 기반 타입이 약속한 규약을 지켜야 함
+## ISP (인터페이스 분리의 원칙)
+- 한 클래스는 자신이 사용하지 않는 인터페이스는 구현하지 말아야 함
+- 어떤 클래스가 다른 클래스에 종속될 때에는 가능한 최소한의 인터페이스만을 사용해야 함
+## DIP (의존성역전의 원칙)
+- 구조적 디자인에서 발생하던 하위 레벨 모듈의 변경이 상위 레벨 모듈의 변경을 요구하는 위계관계를 끊는 의미의 역전
+- 실제 사용 관계는 바뀌지 않으며, 추상을 매개로 메시지를 주고 받음으로써 관계를 최대한 느슨하게 만듦
+
+# 스트래티지 패턴
+- 행위를 클래스로 캡슐화해 동적으로 행위를 자유롭게 바꿀 수 있게 해주는 패턴
+- 전략을 쉽게 바꿀 수 있도록 해주는 디자인 패턴
