--- a/자바 정리.md
+++ b/자바 정리.md
@@ -295,3 +295,56 @@ public class InputStreamEx {
 # 스트래티지 패턴
 - 행위를 클래스로 캡슐화해 동적으로 행위를 자유롭게 바꿀 수 있게 해주는 패턴
 - 전략을 쉽게 바꿀 수 있도록 해주는 디자인 패턴
+
+2021.01.19
+==============
+# 예외
+- 실행 중 오동작이나 결과에 악영향을 미치는 예상치 못한 상황
+- 예외가 발생하면 자바 플랫폼이 가장 먼저 알게 되고, 실행중인 자바 응용 프로그램에 전달함
+- 예외를 전달받은 응용프로그램이 예외에 대응하지 못할 경우, 자바 플랫폼이 프로그램을 강제 종료 시킴
+
+## 예외 종류
+<div>
+<img src="https://user-images.githubusercontent.com/43638508/105659346-e2d7bb00-5f0b-11eb-92c4-dd4b1539346a.png">
+</div>
+
+## 예외 처리
+### try-catch-finally
+	try {
+	  예외가 발생할 가능성이 있는 실행문(try 블록)
+	}
+	catch (처리할 예외 타입 선언){
+	  예외 처리문(catch 블록)
+	}
+	finally {
+	  예외 발생 여부와 상관없이 무조건 실행되는 문장(finally 블록)
+	}
+
+### throw / throws
+- 사용자가 직접 예외를 생성하여 만들 때 사용
+- throw : 강제로 예외를 발생시킬 때
+- throws : 예외가 발생한 메소드를 호출한 곳으로 예외를 넘길 때
+
+# 쓰레드(Thread)
+- 운영 체제에 의해 관리되는 하나의 작업
+- 자바로 코딩한 프로그램을 실행하면 자바 가상머신이 하나의 쓰레드 생성
+- main 메소드를 실행하는 쓰레드를 main 쓰레드라고 함
+- 순서와 상관없이 실행
+
+2021.01.22
+===========
+# GUI
+- 그래픽을 통해 유저와 상호작요하는 인터페이스
+- CLI(콘솔)과 반대의 개념
+## AWT vs Swing
+<div>
+<img src="https://user-images.githubusercontent.com/43638508/105660183-d2284480-5f0d-11eb-9cfd-8fcd342b020e.png">
+</div>
+
+## Layout
+### FlowLayout(FlowLayout.정렬방향, 좌우간격, 상하간격)
+- 왼쪽에서 오른쪽으로, 자리가 없을 시 아래로 배치
+### BoraderLayout(좌우간격, 상하간격)
+- 센터를 중심으로 동서남북 총 5개의 영역으로 나누어 배치
+### GridLayout(행, 열)
+- n행, n열로 구역을 나누어 배치
